--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.ruthiefloats.popularmoviesstage2.MovieDetailActivity">
+        <activity android:name=".DetailActivity">
         </activity>
     </application>
 
