feat: When choosing favorite activity, use MovieContentProvider
Update getData method in MasterFragment to query Content Provider.  Add provider to AndroidManifest.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         </activity>
         <activity android:name=".DetailActivity">
         </activity>
+        <provider
+            android:name="com.ruthiefloats.popularmoviesstage2.data.MovieProvider"
+            android:authorities="com.ruthiefloats.popular-movies-stage-2"/>
     </application>
 
 </manifest>
